--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   supabase: ^1.1.1
   url_launcher: ^6.1.7
   uuid: ^3.0.7
-  youtube_explode_dart: 1.10.7+1
+  youtube_explode_dart: ^1.12.3
 
 dev_dependencies:
   flutter_test:
